--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
       href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     />
     <link rel="stylesheet" href="/static/stylesheets/style.css" />
-    <link rel="shortcut icon" href="/static/movie_locations.png" />
+    <link rel="shortcut icon" href="/static/images/movie_locations2.png" />
 
     {% block head %} {% endblock %}
   </head>
@@ -44,7 +44,7 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <a href="/" class="navbar-brand">
-            <img src="/static/images/movie_locations.png" alt="logo" />
+            <img src="/static/images/movie_locations2.png" alt="logo" />
             <span>Movie Locations</span>
           </a>
         </div>
