--- a/templates/home.html
+++ b/templates/home.html
@@ -86,7 +86,7 @@
           </p>
           <p>
             <span class="text-muted"><em>Location:</em></span>
-            <span>{{ post.location.city }}, {{ post.location.state }}</span>
+            <span>{{ post.location.address}}</span>
           </p>
         </div>
         {% if post.user_id != g.user.id%}
