--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -1,12 +1,6 @@
 /* ====================== General */
-
 body {
-  background-color: #e6ecf0;
-}
-
-.postCard {
-  width: 30rem;
-  height: 35rem;
+  background-color: #384461;
 }
 
 body.error-404 {
@@ -17,8 +11,32 @@ a {
   text-decoration: none;
 }
 
+.postCard {
+  width: auto;
+  height: auto;
+}
+
+.footer {
+  background-color: #333333;
+  color: #ffffff;
+  text-align: center;
+  height: 4rem;
+  padding-top: 1.25rem;
+  width: 100%;
+  /* position: relative; */
+  clear: both;
+  z-index: 9999;
+  position: flex;
+  bottom: 0;
+}
+
 .postCard a.btn {
   color: white;
+}
+
+.postCard .card-img-top {
+  display: block;
+  margin: auto;
 }
 
 .postCard a.btn:hover {
@@ -32,6 +50,7 @@ a {
 
 .postCard .card-img-top {
   height: 300px;
+  max-width: 30rem;
 }
 
 #ppa:hover {
@@ -75,7 +94,7 @@ a {
 
 .navbar {
   background-color: #fff;
-  height: 46px;
+  height: 70px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
   /* margin-bottom: 1rem; */
   position: relative;
@@ -86,6 +105,10 @@ a {
   color: #66757f;
   font-size: 13px;
   font-weight: bold;
+}
+
+.navbar-header {
+  margin-left: 50%;
 }
 
 .navbar a:hover {
@@ -99,9 +122,9 @@ a {
 
 .navbar-brand > img {
   display: inline-block;
-  margin-bottom: 2px;
+  margin-bottom: 1px;
   margin-right: 5px;
-  width: 20px;
+  width: 45px;
   border-radius: 2px;
 }
 
@@ -160,7 +183,7 @@ nav form.navbar-form {
  */
 
 .onboarding > .navbar {
-  background-image: url("/static/images/nav-bg.png");
+  background: linear-gradient(to right, #384461, #df7f4a);
   background-size: 100% 100%;
 }
 
@@ -191,6 +214,10 @@ nav form.navbar-form {
 
 .onboarding {
   background-color: #fff;
+}
+
+.onboarding .footer {
+  position: absolute;
 }
 
 @media (max-width: 468px) {
