--- a/templates/locations.html
+++ b/templates/locations.html
@@ -35,14 +35,37 @@
 
 <!-- Main Content -->
 {% block content %}
-<div class="row justify-content-center my-1">
-  <div class="col">
-    <div id="messages" class="row card-deck">
-      {% for post in posts %}
+<div class="row justify-content-center my-1" style="min-height: 70vw">
+  <!-- Google Maps API below-->
+  <div class="col my-1">
+    <div id="map" class="rounded" style="height: 700px; width: 700px"></div>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp1jKqmi89h2mhNsKtSZYK3-IT3xEq8go&callback=initMap&v=weekly"
+      defer
+    ></script>
 
-      <div class="row justify-content-center my-1">
+    <script src="/static/handle-like.js"></script>
+  </div>
+  <div class="col">
+    <div id="messages" class="col-auto card-deck justify-content-center m-auto">
+      {% for post in posts %}
+      <div class="justify-content-center my-1">
         <div class="card p-2 postCard">
           <a href="/posts/{{ post.id }}" class="message-link"></a>
+          <div class="card-top my-1">
+            <a href="/users/{{ post.user.id }}" id="ppa">
+              <img
+                src="{{ post.user.image_url }}"
+                alt=""
+                class="timeline-image"
+              />
+            </a>
+            <a href="/users/{{ post.user.id }}">{{ post.user.username }}</a>
+            <span class="text-muted"
+              ><small>{{ post.created_at.strftime('%d %B %Y') }}</small></span
+            >
+          </div>
+
           <image
             class="card-img-top rounded border-0"
             src="{{post.image_url}}"
@@ -62,24 +85,32 @@
             </p>
             <p>
               <span class="text-muted"><em>Location:</em></span>
-              <span>{{ post.location.address }}</span>
+              <span>{{ post.location.address}}</span>
             </p>
           </div>
+          {% if post.user_id != g.user.id and g.user.id %}
+          <form
+            method="POST"
+            action=""
+            id="messages-form"
+            class="messages-form"
+            data-id="{{ post.id }}"
+          >
+            <button
+              type="submit"
+              class="
+              btn 
+              btn-sm 
+              {{'btn-primary' if post.id in likes else 'btn-secondary'}}"
+            >
+              <i class="fa fa-thumbs-up"></i>
+            </button>
+          </form>
+          {% endif %}
         </div>
       </div>
       {% endfor %}
     </div>
-  </div>
-
-  <!-- Google Maps API below-->
-  <div class="col my-2 fixed">
-    <div id="map" class="rounded" style="height: 700px; width: 700px"></div>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp1jKqmi89h2mhNsKtSZYK3-IT3xEq8go&callback=initMap&v=weekly"
-      defer
-    ></script>
-
-    <script src="/static/handle-like.js"></script>
   </div>
 </div>
 {% endblock %}
