--- a/templates/movies.html
+++ b/templates/movies.html
@@ -18,7 +18,7 @@
 <!-- Bottom part where movies are generated -->
 {% block content %}
 
-  <div class="row justify-content-center my-3 ">
+  <div class="row justify-content-center my-3" style="min-height: 70vw">
     <div class="col-md-12">
 
         <div id='movie-list' class="row card-deck justify-content-center">
