--- a/templates/posts/edit.html
+++ b/templates/posts/edit.html
@@ -40,7 +40,7 @@
 </div>
 {% endblock %} {% block content %}
 
-<div class="row justify-content-center my-5">
+<div class="row justify-content-center my-4 bg-light">
   <div class="col-md-6">
     <!-- Google Maps API -->
     <h1 class="text-center">Re-select Location</h1>
@@ -65,10 +65,12 @@
         {% endfor %}
       </p>
       {% endfor %}
-      <button type="Submit" class="btn btn-outline-success btn-block">
+      <button type="Submit" class="btn btn-outline-success btn-block my-1">
         Edit this post
       </button>
     </form>
+    <br />
+    <br />
   </div>
 </div>
 
