--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -69,8 +69,9 @@
 </div>
 
 <div class="row">
-  <div class="col-sm-3">
+  <div class="col-sm-3 rounded-2" style="background-color: white; height: 100%">
     <h4 id="sidebar-username">{{ user.username }}</h4>
+
     <p>{{ user.bio }}</p>
   </div>
 
