--- a/templates/posts/movie_search.html
+++ b/templates/posts/movie_search.html
@@ -20,7 +20,7 @@
 <!-- Bottom part where movies are generated -->
 {% block content %}
 
-  <div id='movie-list' class="row card-deck my-3">
+  <div id='movie-list' class="row card-deck my-3" style="min-height: 70vw">
   </div>
 
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
