--- a/templates/base.html
+++ b/templates/base.html
@@ -67,14 +67,12 @@
         </ul>
       </div>
     </nav>
-    {% block fourzerofour %} {% endblock %}
+    {% for category, message in get_flashed_messages(with_categories=True) %}
+    <div class="alert alert-{{ category }}">{{ message }}</div>
+    {% endfor %} {% block fourzerofour %} {% endblock %}
     <div class="top-content">{% block topcontent %} {% endblock %}</div>
 
-    <div class="container">
-      {% for category, message in get_flashed_messages(with_categories=True) %}
-      <div class="alert alert-{{ category }}">{{ message }}</div>
-      {% endfor %} {% block content %} {% endblock %}
-    </div>
+    <div class="container">{% block content %} {% endblock %}</div>
     <footer class="footer">
       <div>MovieLoco App&trade; by Ali Cetiner. All rights reserved. 2022.</div>
     </footer>
