--- a/templates/posts/edit.html
+++ b/templates/posts/edit.html
@@ -39,39 +39,39 @@
   </div>
 </div>
 {% endblock %} {% block content %}
+<div style="min-height: 70vw">
+  <div class="row justify-content-center my-4 bg-light">
+    <div class="col-md-6">
+      <!-- Google Maps API -->
+      <h1 class="text-center">Re-select Location</h1>
+      <p class="text-center">You can pick a new location on the map!</p>
+      <div id="map" style="height: 600px"></div>
 
-<div class="row justify-content-center my-4 bg-light">
-  <div class="col-md-6">
-    <!-- Google Maps API -->
-    <h1 class="text-center">Re-select Location</h1>
-    <p class="text-center">You can pick a new location on the map!</p>
-    <div id="map" style="height: 600px"></div>
-
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp1jKqmi89h2mhNsKtSZYK3-IT3xEq8go&callback=initMap&v=weekly"
-      defer
-    ></script>
-    <p class="my-3">
-      <span>Address: </span
-      ><span id="full-address-span">{{post.location.address}}</span>
-    </p>
-    <form method="POST">
-      {{ form.hidden_tag() }} {% for field in form if field.widget.input_type !=
-      'hidden' %}
-      <p>
-        {{ field.label }} {{ field(placeholder=field.label.text,
-        class="form-control") }} {% for error in field.errors %}
-        <span class="text-danger"> {{ error }} </span>
-        {% endfor %}
+      <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp1jKqmi89h2mhNsKtSZYK3-IT3xEq8go&callback=initMap&v=weekly"
+        defer
+      ></script>
+      <p class="my-3">
+        <span>Address: </span
+        ><span id="full-address-span">{{post.location.address}}</span>
       </p>
-      {% endfor %}
-      <button type="Submit" class="btn btn-outline-success btn-block my-1">
-        Edit this post
-      </button>
-    </form>
-    <br />
-    <br />
+      <form method="POST">
+        {{ form.hidden_tag() }} {% for field in form if field.widget.input_type
+        != 'hidden' %}
+        <p>
+          {{ field.label }} {{ field(placeholder=field.label.text,
+          class="form-control") }} {% for error in field.errors %}
+          <span class="text-danger"> {{ error }} </span>
+          {% endfor %}
+        </p>
+        {% endfor %}
+        <button type="Submit" class="btn btn-outline-success btn-block my-1">
+          Edit this post
+        </button>
+      </form>
+      <br />
+      <br />
+    </div>
   </div>
 </div>
-
 {% endblock %}
