--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -86,7 +86,7 @@ a {
 }
 
 .top-content {
-  position: sticky;
+  /* position: sticky; */
   top: 0;
   z-index: 999;
 }
@@ -97,7 +97,8 @@ a {
   height: 70px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
   /* margin-bottom: 1rem; */
-  position: relative;
+  position: sticky;
+  top: 0;
   z-index: 9999;
 }
 
