--- a/templates/posts/movie_search.html
+++ b/templates/posts/movie_search.html
@@ -4,8 +4,8 @@
 {% block topcontent %}
 <section class="jumbotron text-center py-5 bg-light" style="background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4) ), url('/static/images/movies-background.jpeg'); background-size:60%;">
   <div class="container">
-    <h1 class="jumbotron-heading text-light">SEARCH MOVIES</h1>
-    <p class="lead text-light">Look up Movies to see Movie Locations!</p>
+    <h1 class="jumbotron-heading text-light">POST NEW MOVIE LOCATION</h1>
+    <p class="lead text-light">Search for the Movie you want to post about!</p>
     <p>
       <form id='movie-search-form' method="POST">
         <input id='movie-name' type="text"> </input>
