--- a/templates/posts/new.html
+++ b/templates/posts/new.html
@@ -47,7 +47,7 @@
     <div id="map" style="height: 600px"></div>
 
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp1jKqmi89h2mhNsKtSZYK3-IT3xEq8go&callback=initMap&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEYgo&callback=initMap&v=weekly"
       defer
     ></script>
 
