--- a/templates/posts/show.html
+++ b/templates/posts/show.html
@@ -124,7 +124,7 @@ background-position: center;
      with https://www.npmjs.com/package/@googlemaps/js-api-loader.
     -->
 <script
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCp1jKqmi89h2mhNsKtSZYK3-IT3xEq8go&callback=initMap&v=weekly"
+  src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEYgo&callback=initMap&v=weekly"
   defer
 ></script>
 
